--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,34 @@
 .App {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+main {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
 iframe {
   border: 0;
-  width: 600px;
-  height: 30px;
+  width: 200px;
+  height: 150px;
 }
 
 input,
 textarea,
 section {
-  margin-top: 4px;
+  width: 100%;
 }
 
-button + button {
-  margin-left: 4px;
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 
 button,
