--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ main {
 
 iframe {
   border: 0;
-  height: 160px;
+  height: 108px;
 }
 
 input,
@@ -57,4 +57,30 @@ footer {
 
 a {
   text-decoration: none;
+}
+
+@keyframes wait {
+  0% {
+    --content: '⏳';
+    transform: rotate(0deg);
+  }
+
+  50% {
+    --content: '⌛';
+    transform: rotate(0deg);
+  }
+
+  100% {
+    --content: '⌛';
+    transform: rotate(180deg);
+  }
+}
+
+.wait {
+  transform: rotate(0deg);
+  animation: wait 1.5s linear infinite;
+}
+
+.wait::before {
+  content: var(--content);
 }
