--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ section {
 button,
 input,
 textarea,
+label,
 footer {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
